pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-app-root-and-server-alias.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-app-root-alias
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/app-root: /foo
    nginx.ingress.kubernetes.io/server-alias: "alias1.localhost"

spec:
  ingressClassName: nginx
  rules:
    - host: app-root.localhost
      http:
        paths:
          - path: /bar
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
